--- a/docs/templates/header.tmpl
+++ b/docs/templates/header.tmpl
@@ -1,4 +1,5 @@
-{{define "header"}}---
+{{- define "header"}}
+---
 title: Kubernetes Deployment Reference
 sidebar_label: Reference
 description: Reference for Pomerium settings in Kubernetes deployments.
