--- a/docs/templates/objects.tmpl
+++ b/docs/templates/objects.tmpl
@@ -1,6 +1,7 @@
-{{define "objects"}}
-{{range .}}
+{{- define "objects"}}
+{{- range .}}
+
 ### `{{.ID}}`
 {{template "object" .}}
-{{end}}
+{{- end}}
 {{end}}
